--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ workflows:
   build-and-publish-docker-image:
     jobs:
       - docker/publish:
-          image: kirinhou/snapserver
+          image: kirintwn/snapserver
           tag: 'latest,0.19.0'
