--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 ---
 version: "3.7"
 services:
-  portainer:
-    build: ./
+  snapserver:
+    image: kirintwn:snapserver
     container_name: snapserver
     command: "--stream.stream=spotify:///librespot?name=spotify&username=${SPOTIFY_USERNAME}&password=${SPOTIFY_PASSWORD}"
     ports:
